[package]
name = "anicoder"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Episode transcoder for Anigelo"
homepage = "https://github.com/anigelo/anicoder"
documentation = "https://docs.rs/anicoder"
repository = "https://github.com/anigelo/anicoder"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
walkdir = "2.3"